--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -549,7 +549,7 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 
 
 
-
+/* dropdown deals */
 .middle_show{padding:20px;border:3px solid #000;}
 .transition, .middle_show p, .middle_show ul li i:before, .middle_show ul li i:after{transition:all 0.25s ease-in-out;}
 /*.flipIn, .middle_show h1, .middle_show ul li{animation:flipdown 0.5s ease both;}*/
@@ -580,3 +580,5 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
   92%{transform:rotateX(-3deg);}
   100%{transform-origin:top center;transform:rotateX(0deg);}
 }
+
+/* slide deals */
