--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -1,3 +1,11 @@
+/* Common css for Deals Page */
+.middle_box{border-bottom:1px solid #ccc;padding-bottom:10px;}
+.middle_box img{width:100%;}
+@media screen and (max-width:640px){
+  .middle_box{padding-bottom:27px;}
+}
+
+
 /* Section Promo Code */
 @media screen and (min-width:640px){
   .codes{}
