--- a/app/views/recommends/_body.html.erb
+++ b/app/views/recommends/_body.html.erb
@@ -12,10 +12,10 @@
   <div class="image_box"><%= link_to (image_tag recommend.re_image), recommend %></div>
   <div class="node-box inner">
     <h2><%= link_to recommend.re_title, recommend %></h2>
-    <!-- <p><%= link_to recommend.re_intro, recommend %></p> -->
-    <!-- <span>Last Updated: <%= recommend.sub_number_01 %></span> -->
+    <p><%= link_to recommend.re_intro, recommend %></p>
+    <span>Last Updated: <%= recommend.sub_number_01 %></span>
   </div>
-  <!-- <div class="btn"><a href="/guides/Guide_Link">Read More</a></div> -->
+  <div class="btn"><a href="/guides/Guide_Link">Read More</a></div>
   
     <div class="btn clearfix admin">
       <span><%= link_to "Read More", recommend %></span>
@@ -30,3 +30,24 @@
     <% end %>
  </div> 
 <% end %>
+
+<!-- 
+<% @recommends.each do |recommend| %>
+  <div class="filter-node pick_box" data-filter='["<%= recommend.re_filter %>","<%= recommend.re_title %>"]'>
+    <div class="pick_image"><%= link_to (image_tag recommend.re_image), recommend %></div>
+    <h2><%= link_to recommend.re_title, recommend %></h2>
+
+
+    <div class="btn clearfix admin">
+      <span><%= link_to "Read More", recommend %></span>
+      <% if can? :update, recommend %>
+        <em><%= link_to "Edit", edit_recommend_path(recommend) %></em><%= link_to "Delete", recommend_path(recommend), method: :delete, data: {confirm: "Are you sure?"}%>
+      <% end %>  
+    </div>    
+    <% if can? :update, recommend %>
+      <div class="pinterest">
+       <script async defer data-pin-hover="true" data-pin-tall="true" src="//assets.pinterest.com/js/pinit.js"></script>
+      </div>
+    <% end %>
+  </div> 
+<% end %> -->
