--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -74,6 +74,9 @@
 <div class="js-overlay-start start dealtube" data-url= "Youtube_URL"><button><img src="<%=asset_path 'youtube_02.png' %>" alt="Play Youtube" /></button><button class="text">Play Video</button></div>
 
 <div class="middle_box"><a target="_blank" href="https://amzn.to/2mydhEX"><img src="<%=asset_path 'extra_save.png' %>" alt="Save $10 when you spend $100" /></a></div>
+
+
+<div class="image"><img src="<%=asset_path 'time.png' %>" alt="out of sold" /></div>
 -->
 
 <div class="card clearfix" data-score="18" data-price="99.00">
