--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -76,6 +76,11 @@
   .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;}
   .codes .card_wrap .card .inner>.shipping_condition{display:block;font-size:12px;}
   .codes .card_wrap .card .inner>.shipping_condition>a{color:#08f;text-decoration:none;font-weight:bold;}
+
+  .codes .card_wrap .card .inner>.status{}
+  .codes .card_wrap .card .inner>.status>ul{}
+  .codes .card_wrap .card .inner>.status>ul>li{float:left;margin:0 5px 3px 0;background:#000;color:#fff;border-radius:10px;font-size:13px;padding:0 5px;}
+
   .codes .card_wrap .card .inner>p>a{line-height:1.4;height:2.8em;overflow:hidden;margin:10px 0;text-decoration:none;color:#616161;display:block;}
   .codes .card_wrap .card .inner>p>a>span{color:#fff;background:#08f;padding:0 5px;border-radius:5px;}
   .codes .card_wrap .card .inner>strong>a{color:#08f;}
@@ -119,7 +124,9 @@
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span>em{font-size:11px;text-decoration:line-through;color:#616161;margin-left:1%;}
   .codes .card_wrap .card .deal_btn{float:left;width:20%;text-align:center;margin:60px 1.5% 0 1.5%;}
   .codes .card_wrap .card .promo_btn{margin-top:90px;}
-  .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#000;display:block;font-family: 'Montserrat', sans-serif;font-weight:bold;border:3px solid #000;padding:10px 5px;}
+  .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#000;display:inline-block;font-family: 'Montserrat', sans-serif;font-weight:bold;border:3px solid #000;padding:10px 5px;position:relative;}
+  .codes .card_wrap .card .deal_btn a .image{width:20px;display:inline-block;margin-left:3px;position:absolute;top:11px;left:4px;}
+  .codes .card_wrap .card .deal_btn a .image img{width:100%;}
   .codes .card_wrap .card .deal_btn p{color:#ff3333;}
 }
 
@@ -175,6 +182,9 @@
   .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;}
   .codes .card_wrap .card .inner>.shipping_condition{display:block;font-size:12px;}
   .codes .card_wrap .card .inner>.shipping_condition>a{color:#08f;text-decoration:none;font-weight:bold;}
+  .codes .card_wrap .card .inner>.status{}
+  .codes .card_wrap .card .inner>.status>ul{}
+  .codes .card_wrap .card .inner>.status>ul>li{float:left;margin:0 5px 3px 0;background:#000;color:#fff;border-radius:10px;font-size:13px;padding:0 5px;}
   .codes .card_wrap .card .inner>p{margin:10px 0;}
   .codes .card_wrap .card .inner>p>a{font-size:13px;line-height:1.4;height:auto;overflow:visible;margin:10px 0 0 0;text-decoration:none;color:#000;}
   .codes .card_wrap .card .inner>em{display:block;margin-right:5px;font-size:13px;font-weight:400;}
@@ -213,7 +223,9 @@
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span{}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span>em{font-size:11px;text-decoration:line-through;color:#616161;margin-left:1%;}
   .codes .card_wrap .card .deal_btn{float:none;width:100%;margin:10px 0;text-align:center;}
-  .codes .card_wrap .card .deal_btn a{text-decoration:none;margin:20px 0 0 0;padding:10px 20px;font-family: 'Montserrat', sans-serif;font-weight:bold;background:#000;color:#fff;display:block;border-radius:10px;}
+  .codes .card_wrap .card .deal_btn a{text-decoration:none;margin:20px 0 0 0;padding:10px 20px;font-family: 'Montserrat', sans-serif;font-weight:bold;background:#000;color:#fff;display:block;border-radius:10px;position:relative;}
+  .codes .card_wrap .card .deal_btn a .image{width:20px;display:inline-block;margin-left:3px;position:absolute;top:11px;left:4px;}
+  .codes .card_wrap .card .deal_btn a .image img{width:100%;}
   .codes .card_wrap .card .deal_btn p{color:#ff3333;margin-top:10px;}
   .codes .rt_cnt .updating{font-size:30px;font-size:20px;font-family: 'Anton', sans-serif;margin-bottom:100px;}
   .codes .rt_cnt .updating a{display:block;text-decoration:none;color:#fff;background:#000;padding:5px 10px;}
@@ -244,6 +256,8 @@
   .codes .card_wrap .card .inner>.code_high>.mobile_code{display:block;margin-bottom:13px;}
   .codes .card_wrap .card .inner>.code_high>p>span>.m_codes{background:#000;color:#fff;padding:5px 10px;border-radius:10px;line-height:38px;}
 
+  .codes .card_wrap .card .deal_btn a .image{width:17px;left:0px;}
+  
   .codes .card_wrap .card .inner>.code_high .tooltip_common{display:none;}
   .codes .card_wrap .card .inner>.code_high .m_tooltip_common{display:block;position:relative;display:inline;color:#fff;padding:0 10px;border-radius:10px;}
   .codes .card_wrap .card .inner>.code_high .m_tooltip_common:hover .m_tooltip-content{visibility: visible;}
