--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -426,7 +426,8 @@
 .promotions .guide_controll p{font-size:40px;color:#fff;}
 .promotions .promotion_box{float:left;width:31.3333%;height:450px;margin:0 1% 2% 1%;border:1px solid;position:relative;}
 .promotions .promotion_box .image_box{}
-.promotions .promotion_box img{width:100%;height:200px;margin-bottom:-15px;object-fit:cover;}
+.promotions .promotion_box img{width:100%;height:200px;margin-bottom:-15px;object-fit:cover;-webkit-filter:grayscale(85%);filter:gray;}
+.promotions .promotion_box img:hover{-webkit-filter:grayscale(0);}
 .promotions .promotion_box .inner{padding:20px;}
 .promotions .promotion_box .inner h2{font-size:27px;line-height:1.2;font-weight:100;}
 .promotions .promotion_box .inner h2 a{text-decoration:none;color:#616161;}
