--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -54,7 +54,7 @@
        <!-- <p>Please remember that we are not an actual webstore. We do not sell anything ourselves, and we do not ship anything ourselves. We cannot assist you with your purchase orders, and we do not know if a product can be shipped internationally.</p> -->
        <h3># The product you're linking to is no longer available, or the link is broken?</h3>
        <p>Sometimes products will run out of stock or completely be removed from the websites. If you find something like that, please let us know which item it is, so we can update it. We would be much obliged.</p>
-       <a href="/messages/new">Contac Us</a>
+       <a href="/messages/new">Contact Us</a>
       </div>
 
 <!--       <div class="bottom sections clearfix">
