--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="clearfix">
   <div class="wrap">
-    <button class="gnb_open2"><img src="<%=asset_path 'more_black.png' %>" alt="open mobile menu" /></button>
+    <button class="gnb_open2"><img src="<%=asset_path 'main_ham.png' %>" alt="open mobile menu" /></button>
     <div class="gnb_pc clearfix">
       <a href="/"><img class="oh_logo" src="<%=asset_path 'oh_logo.jpg' %>" alt="ohigottabuythis" /></a>
 
