--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -112,8 +112,8 @@ header .gnb_m,header .gnb_open2{display:none;}
   header .gnb_m>ul>li>ul>li>a{text-decoration:none;color:#fff;font-size:25px;line-height:1.3;}
   header .gnb_m>.gnb_close{display:block;position:absolute;right:0;top:12px;z-index:303;margin:0 5%;}
   header .gnb_m>.gnb_close img{width:50px;height:50px;}
-  header .gnb_open2{display:block;position:fixed;left:-20px;top:9px;z-index:301;margin:0 5%;}
-  header .gnb_open2 img{width:55px;height:30px;}
+  header .gnb_open2{display:block;position:fixed;left:-5px;top:9px;z-index:301;margin:0 5%;}
+  header .gnb_open2 img{width:30px;}
   header .gnb_pc_scroll{display:none;}
 }
 
@@ -338,7 +338,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 .search_box{float:left;}
 .search_box input{font-size:35px;padding:10px;margin-left:20px;border:none;border-bottom:1px solid #ccc;}
 @media screen and (max-width:640px){
-  .search_box{float:none;background:#000;padding:5px;}
+  .search_box{float:none;background:#000;padding:3px;}
   .search_box input{font-size:20px;padding:5px;margin:0;width:100%;}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
