--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -4,17 +4,24 @@
 <div class="layout"><!--layout-->
   <div class="wrap">  
   <%= render 'shared/header' %>
+
+  <!-- <div class="deals_main_menu">
+    <ul>
+      <li>Amazon</li>
+      <li>Stores</li>
+    </ul>
+  </div> -->
   <%= render 'deals/header' %>    
   
   <div class="codes common_layout">
-    
+
       <div class="lt_cnt note_pc">
         <h2>Daily Deals of Amazon</h2>
         <%= render 'deals/notes_bestdeals' %>
       </div><!--./lt_cnt-->
       
       <div class="rt_cnt">
-        <h2>Daily Deals | Hand-Pick On Amazon Sep. 27. 2019.</h2>
+        <h2>Daily Deals | Hand-Pick On Amazon Sep. 28. 2019.</h2>
         
         <div class="sort_box clearfix">
           <!-- <div class="deals_des">We pick the best deals from all categories of Amazon!! We just hope you like it :D</div> -->
@@ -40,7 +47,7 @@
         </div>
         <!-- End -->
 
-        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_02">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
+        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_03">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
         
         
       </div><!--./rt_cnt-->    
