--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -73,7 +73,8 @@
 
 <div class="js-overlay-start start dealtube" data-url= "Youtube_URL"><button><img src="<%=asset_path 'youtube_02.png' %>" alt="Play Youtube" /></button><button class="text">Play Video</button></div>
 
-<div class="middle_box"><a target="_blank" href="https://amzn.to/2mydhEX"><img src="<%=asset_path 'extra_save.png' %>" alt="Save $10 when you spend $100" /></a></div>
+<div class="middle_box"><a target="_blank" href="https://amzn.to/2mydhEX"><img src="<%=asset_path 'save_when.png' %>" alt="Save $10 when you spend $100" /></a></div>
+<div class="middle_box_m"><a target="_blank" href="https://amzn.to/2mydhEX"><img src="<%=asset_path 'save_when_m.png' %>" alt="Save $10 when you spend $100" /></a></div>
 
 <div class="image"><img src="<%=asset_path 'time.png' %>" alt="out of sold" /></div>
 -->
@@ -238,7 +239,8 @@
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2nodbjE">Shop Now at Amazon</a></div>
 </div>
 
-<div class="middle_box"><a target="_blank" href="https://amzn.to/2mydhEX"><img src="<%=asset_path 'extra_save.png' %>" alt="Save $10 when you spend $100" /></a></div>
+<div class="middle_box"><a target="_blank" href="https://amzn.to/2mydhEX"><img src="<%=asset_path 'save_when.png' %>" alt="Save $10 when you spend $100" /></a></div>
+<div class="middle_box_m"><a target="_blank" href="https://amzn.to/2mydhEX"><img src="<%=asset_path 'save_when_m.png' %>" alt="Save $10 when you spend $100" /></a></div>
 
 <div class="card dealofday clearfix" data-score="60" data-price="discounted_price">
   <div class="image_box">
