--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -26,7 +26,8 @@
  <div class="js-overlay-start start dealtube" data-url= "Youtube_URL"><button><img src="<%=asset_path 'youtube_02.png' %>" alt="Play Youtube" /></button><button class="text">Play Video</button>
 </div>
 
-<div class="middle_box"><a target="_blank" href="https://amzn.to/2mydhEX"><img src="<%=asset_path 'extra_save.png' %>" alt="Save $10 when you spend $100" /></a></div>
+<div class="middle_box"><a target="_blank" href="https://amzn.to/2mydhEX"><img src="<%=asset_path 'save_when.png' %>" alt="Save $10 when you spend $100" /></a></div>
+<div class="middle_box_m"><a target="_blank" href="https://amzn.to/2mydhEX"><img src="<%=asset_path 'save_when_m.png' %>" alt="Save $10 when you spend $100" /></a></div>
 -->
 
 <!-- <div class="card clearfix" data-score="percentage" data-price="discounted_price">
@@ -221,6 +222,9 @@
   </div> 
   <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2nmgU1l">Use Code at Amazon</a></div>
 </div>
+
+<div class="middle_box"><a target="_blank" href="https://amzn.to/2mydhEX"><img src="<%=asset_path 'save_when.png' %>" alt="Save $10 when you spend $100" /></a></div>
+<div class="middle_box_m"><a target="_blank" href="https://amzn.to/2mydhEX"><img src="<%=asset_path 'save_when_m.png' %>" alt="Save $10 when you spend $100" /></a></div>
  
 <div class="card clearfix" data-score="70" data-price="7.46">
   <div class="image_box">
