--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -50,7 +50,95 @@
 </div>
  -->
 
-<div class="card clearfix" data-score="50" data-price="16.50">
+<div class="card clearfix" data-score="50" data-price="25.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2lWo1Ny"><img src="https://m.media-amazon.com/images/I/61mqFfqgvQL._SR400,400_.jpg" alt="Outdoor Security Camera" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2lWo1Ny">Outdoor Security Camera Home 1080P WiFi Bullet Cameras Two-Way Audio Surveillance System Motion Detection Night Vision IP Cam All-Weather...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$25.00</span><span class="ori_price">$49.99</span>
+        <div class="tooltip_common tooltip_green"><span> + 5% off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + 5% off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">507XV7FJ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $49.99</strong> with promo code: <strong class="m_codes">507XV7FJ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 28, 2019 at 09:00 AM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2lWo1Ny">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="41" data-price="8.25">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2o19tN8"><img src="https://m.media-amazon.com/images/I/61Sg416i3HL._SR400,400_.jpg" alt="Funny Coffee Mugs" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>41% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2o19tN8">Funny Coffee Mugs, Heat Changing Coffee Magic Mug,Sensitive Ceramic Tea Cups,Days and Night Earth Map,Novelty Gifts ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.25</span><span class="ori_price">$13.99</span></address>
+      <textarea readonly="readonly" class="code_area">41C52BPA</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>41% off at $13.99</strong> with promo code: <strong class="m_codes">41C52BPA</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 04, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2o19tN8">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="34" data-price="8.02">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2o3qmXv"><img src="https://m.media-amazon.com/images/I/61bX2jrlZ7L._SR400,400_.jpg" alt="Cat Mug,Funny Ceramic Coffee mugs" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>34% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2o3qmXv">Cat Mug,Funny Ceramic Coffee mugs with Lid and Spoon, Cute Tea Cups Novelty Gift for Cat Lovers, Women, Girlfriends</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.02</span><span class="ori_price">$12.15</span></address>
+      <textarea readonly="readonly" class="code_area">34NUV46C</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>34% off at $12.15</strong> with promo code: <strong class="m_codes">34NUV46C</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2o3qmXv">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="60" data-price="13.20">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2lXFncW"><img src="https://m.media-amazon.com/images/I/81YASs+fxJL._SR400,400_.jpg" alt="VANCOOL Meal Prep Containers 3 Compartment" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2lXFncW">VANCOOL Meal Prep Containers 3 Compartment with Lids BPA Free Food Storage Bento Style Lunch Boxes for Portion Control...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.2</span><span class="ori_price">$32.99</span></address>
+      <textarea readonly="readonly" class="code_area">promo_code</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $32.99</strong> with promo code: <strong class="m_codes">promo_code</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2lXFncW">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="30" data-price="8.92">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2nwFEni"><img src="https://m.media-amazon.com/images/I/71Xfx3hcZiL._SR400,400_.jpg" alt="Blow Torch Kitchen Butane Lighter " /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2nwFEni">Blow Torch Kitchen Butane Lighter - Culinary Torch Chef Cooking Torch Professional Adjustable Flame with 360 Degree Inverted for Creme,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.92</span><span class="ori_price">$12.74</span></address>
+      <textarea readonly="readonly" class="code_area">30AH7Q9J</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $12.74</strong> with promo code: <strong class="m_codes">30AH7Q9J</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 20, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2nwFEni">Use Code at Amazon</a></div>
+</div>
+ 
+ <div class="card clearfix" data-score="50" data-price="16.50">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2mnAWbE"><img src="https://m.media-amazon.com/images/I/619daxa18qL._SR400,400_.jpg" alt="Aromacare Essential Oil Diffusers" /></a>
   </div>
@@ -223,9 +311,6 @@
   <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2nmgU1l">Use Code at Amazon</a></div>
 </div>
 
-<div class="middle_box"><a target="_blank" href="https://amzn.to/2mydhEX"><img src="<%=asset_path 'save_when.png' %>" alt="Save $10 when you spend $100" /></a></div>
-<div class="middle_box_m"><a target="_blank" href="https://amzn.to/2mydhEX"><img src="<%=asset_path 'save_when_m.png' %>" alt="Save $10 when you spend $100" /></a></div>
- 
 <div class="card clearfix" data-score="70" data-price="7.46">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2npmpw3"><img src="https://m.media-amazon.com/images/I/71Xmafc1feL._SR400,400_.jpg" alt="Hair Clippers for Men" /></a>
