--- a/app/views/shared/_header_short.html.erb
+++ b/app/views/shared/_header_short.html.erb
@@ -17,7 +17,7 @@
 
 <header class="clearfix m_header">
   <div class="wrap">
-    <button class="gnb_open2"><img src="<%=asset_path 'more_black.png' %>" alt="open mobile menu" /></button>
+    <button class="gnb_open2"><img src="<%=asset_path 'main_ham.png' %>" alt="open mobile menu" /></button>
 
     <div class="on gnb_pc clearfix">
       <a href="/"><img class="oh_logo" src="<%=asset_path 'oh_logo.jpg' %>" alt="ohigottabuythis" /></a>
