--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -1,4 +1,5 @@
 /* Common css for Deals Page */
+/* Deals banner */
 .middle_box, .middle_box_m{border-bottom:1px solid #ccc;padding-bottom:10px;}
 .middle_box img, .middle_box_m img{width:100%;}
 .middle_box_m{display:none;}
@@ -6,7 +7,6 @@
   .middle_box{display:none;}
   .middle_box_m{display:block;padding-bottom:27px;}
 }
-
 
 /* Section Promo Code */
 @media screen and (min-width:640px){
