--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -1,7 +1,7 @@
 /* Common css for Deals Page */
 /* Deals banner */
 .middle_box, .middle_box_m{border-bottom:1px solid #ccc;padding-bottom:10px;}
-.middle_box img, .middle_box_m img{width:100%;}
+.middle_box img, .middle_box_m img, .middle_box_insta img{width:100%;}
 .middle_box_m{display:none;}
 @media screen and (max-width:640px){
   .middle_box{display:none;}
