--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -257,6 +257,9 @@
   <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2lOLIan">Use Code at Amazon</a></div>
 </div>
 
+<div class="middle_box"><a target="_blank" href="https://www.amazon.com/gp/promotion/A3RWL3MVWXYWEE/ref=as_li_ss_tl?ascsub&linkCode=sl2&tag=3628-20&linkId=aa97c5e7019720131af6e12aeae493b3&language=en_US"><img src="<%=asset_path 'save_when.png' %>" alt="Save $10 when you spend $100" /></a></div>
+<div class="middle_box_m"><a target="_blank" href="https://www.amazon.com/gp/promotion/A3RWL3MVWXYWEE/ref=as_li_ss_tl?ascsub&linkCode=sl2&tag=3628-20&linkId=aa97c5e7019720131af6e12aeae493b3&language=en_US"><img src="<%=asset_path 'save_when_m.png' %>" alt="Save $10 when you spend $100" /></a></div>
+
 <div class="card clearfix" data-score="55" data-price="6.75">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2nZosXT"><img src="https://images-na.ssl-images-amazon.com/images/I/61pYON8Pp%2BL._UY535_.jpg" alt="Color Knit Thong Slippers" /></a>
