--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -239,6 +239,9 @@
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/2nodbjE">Shop Now at Amazon</a></div>
 </div>
 
+<div class="middle_box"><a target="_blank" href="https://www.amazon.com/gp/promotion/A3RWL3MVWXYWEE/ref=as_li_ss_tl?ascsub&linkCode=sl2&tag=3628-20&linkId=aa97c5e7019720131af6e12aeae493b3&language=en_US"><img src="<%=asset_path 'save_when.png' %>" alt="Save $10 when you spend $100" /></a></div>
+<div class="middle_box_m"><a target="_blank" href="https://www.amazon.com/gp/promotion/A3RWL3MVWXYWEE/ref=as_li_ss_tl?ascsub&linkCode=sl2&tag=3628-20&linkId=aa97c5e7019720131af6e12aeae493b3&language=en_US"><img src="<%=asset_path 'save_when_m.png' %>" alt="Save $10 when you spend $100" /></a></div>
+
 <div class="card dealofday clearfix" data-score="60" data-price="discounted_price">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2o3vifa"><img src="https://images-na.ssl-images-amazon.com/images/I/71Xc2J0ApkL._AC_SR300,300_.jpg" alt="Amazon Deal Of The Day" /></a>
