--- a/app/views/deals/categories.html.erb
+++ b/app/views/deals/categories.html.erb
@@ -4,9 +4,9 @@
     
     <div class="deal_category_wrap">
       <div class="category_body clearfix">
-        <h2>- Quick Menu -</h2>
         <div class="left">
           <ul>
+            <div class="middle_box_insta"><a target="_blank" href="https://www.amazon.com/gp/promotion/A3RWL3MVWXYWEE/ref=as_li_ss_tl?ascsub&linkCode=sl2&tag=3628-20&linkId=aa97c5e7019720131af6e12aeae493b3&language=en_US"><img src="<%=asset_path 'save_when.png' %>" alt="Save $10 when you spend $100" /></a></div>
             <li><a href="/deals/bestdeals"># The Best Deals</a></li>
             <li><a href="/deals/promo_codes"># Promo Codes</a></li>
             <li><a href="/deals/most_reviewed"># Most-Reviewed</a></li>
