--- a/app/views/guides/index.html.erb
+++ b/app/views/guides/index.html.erb
@@ -62,12 +62,12 @@
         </div>
 
         <div class="filter-node promotion_box" data-filter='["color","Gift for people who are crazy about PINK!"]'>
-          <div class="image_box"><a href="/guides/guide_01"><img src="https://images.unsplash.com/photo-1490367605959-06955305859b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="pink"></a></div>
+          <div class="image_box"><a href="/guides/guide_05"><img src="https://images.unsplash.com/photo-1490367605959-06955305859b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="pink"></a></div>
           <div class="node-box inner">
-            <h2><a href="/guides/guide_01">Gift for people who are CRAZY about PINK!</a></h2>
+            <h2><a href="/guides/guide_05">Halloween</a></h2>
             <span>Last Updated: Jul. 09. 2019</span>
           </div>
-          <div class="btn"><a href="/guides/guide_01">Read More</a></div>
+          <div class="btn"><a href="/guides/guide_05">Read More</a></div>
         </div>
 
         
