--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -79,6 +79,22 @@
 <div class="image"><img src="<%=asset_path 'time.png' %>" alt="out of sold" /></div>
 -->
 
+<div class="card clearfix" data-score="30" data-price="38.47">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/Quikflip-Backpack-Hoodie-Unisex-Full-Zip/dp/B07PLZ4FQ5/ref=as_li_ss_tl?ref_=Oct_DLandingS_PC_8358b235_0&smid=AONEPYRS2MDQ6&linkCode=sl1&tag=3628-20&linkId=c964f9d5f088efe873ef4af067225efd&language=en_US"><img src="https://images-na.ssl-images-amazon.com/images/I/61ujdV5debL._UX679_.jpg" alt="Quikflip 2-in-1 Reversible Backpack Hoodie" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/Quikflip-Backpack-Hoodie-Unisex-Full-Zip/dp/B07PLZ4FQ5/ref=as_li_ss_tl?ref_=Oct_DLandingS_PC_8358b235_0&smid=AONEPYRS2MDQ6&linkCode=sl1&tag=3628-20&linkId=c964f9d5f088efe873ef4af067225efd&language=en_US"><span>Amazon Deal Of The Day:</span> Quikflip 2-in-1 Reversible Backpack Hoodie (As Seen on Shark Tank) Unisex Full-Zip Hero Hoodie</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$38.47</span><span class="ori_price">$54.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://www.amazon.com/Quikflip-Backpack-Hoodie-Unisex-Full-Zip/dp/B07PLZ4FQ5/ref=as_li_ss_tl?ref_=Oct_DLandingS_PC_8358b235_0&smid=AONEPYRS2MDQ6&linkCode=sl1&tag=3628-20&linkId=c964f9d5f088efe873ef4af067225efd&language=en_US">Shop Now at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="55" data-price="117.37">
   <div class="image_box">
     <a target="_blank" href="https://www.amazon.com/dp/B00YO349KQ/ref=as_li_ss_tl?&linkCode=sl1&tag=3628-20&linkId=0e998dd3760a2006de759b7d279d90b4&language=en_US"><img src="https://images-na.ssl-images-amazon.com/images/I/31mMEcUjRjL._SX425_.jpg" alt="Tvilum 7538449ak Diana Coffee Table, White Oak" /></a>
@@ -241,6 +257,9 @@
   </div> 
   <div class="deal_btn"><a target="_blank" href="https://www.amazon.com/dp/B00BCQ4D9A/ref=as_li_ss_tl?&linkCode=sl1&tag=3628-20&linkId=8e815532be52b5dfd376030ccc0e33a9&language=en_US">Shop Now at Amazon</a></div>
 </div>
+
+<div class="middle_box"><a target="_blank" href="https://amzn.to/2mydhEX"><img src="<%=asset_path 'save_when.png' %>" alt="Save $10 when you spend $100" /></a></div>
+<div class="middle_box_m"><a target="_blank" href="https://amzn.to/2mydhEX"><img src="<%=asset_path 'save_when_m.png' %>" alt="Save $10 when you spend $100" /></a></div>
 
 <div class="card clearfix" data-score="54" data-price="9.60">
   <div class="image_box">
