--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -183,8 +183,6 @@
   <div class="deal_btn promo_btn"><a target="_blank" href="https://www.amazon.com/dp/B07K56M4Q6/ref=as_li_ss_tl?m=A2JMISZ4H86T7E&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=8651e68707cf2a79356f44b8ec9af25c&language=en_US">Use Code at Amazon</a></div>
 </div>
 
-
-
 <div class="card clearfix" data-score="50" data-price="14.99">
   <div class="image_box">
     <a target="_blank" href="https://www.amazon.com/dp/B07M8SB1M1/ref=as_li_ss_tl?m=A1OMJGOK5HBO57&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=0ae4ab442046475df76847fe97069973&language=en_US"><img src="https://m.media-amazon.com/images/I/61sAhEwWiJL._SR400,400_.jpg" alt="Vertical Bracket with Cooling Fan" /></a>
@@ -221,6 +219,9 @@
   </div> 
   <div class="deal_btn promo_btn"><a target="_blank" href="https://www.amazon.com/dp/B07TVH8S6J/ref=as_li_ss_tl?m=A4Q9CLVXFNW5G&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=26f22184a507a55919e8e239fe49a397&language=en_US">Use Code at Amazon</a></div>
 </div>
+
+<div class="middle_box"><a target="_blank" href="https://amzn.to/2mydhEX"><img src="<%=asset_path 'save_when.png' %>" alt="Save $10 when you spend $100" /></a></div>
+<div class="middle_box_m"><a target="_blank" href="https://amzn.to/2mydhEX"><img src="<%=asset_path 'save_when_m.png' %>" alt="Save $10 when you spend $100" /></a></div>
 
 <div class="card clearfix" data-score="20" data-price="39.99">
   <div class="image_box">
