--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -54,7 +54,7 @@
     </div>
 
     <div class="cateogry_box">
-      <a href="/gadgets?category=Outdoor+%26+Sprots">
+      <a href="/gadgets?category=Outdoor+%26+Sports">
         <img src="https://images.unsplash.com/photo-1414016642750-7fdd78dc33d9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
         <div class="centered">OUTDOOR & SPORTS</div>
       </a>
