--- a/app/views/blogs/bestoftheweek.html.erb
+++ b/app/views/blogs/bestoftheweek.html.erb
@@ -4,7 +4,9 @@
   
   <div class="special_deals_box">
     <div class="promotions editors_pick common_layout most_wrapper clearfix">
-      <h2 class="special_title">The best Labor Day deals of 2019</h2> 
+      <h2 class="week_pc"><img src="<%=asset_path 'best_week.png' %>" alt="best of the week sales"></h2>
+      <h2 class="week_m"><img src="<%=asset_path 'best_week_m.png' %>" alt="best of the week sales"></h2>
+      <!-- <h2 class="special_title">Best Of The Week Sales</h2>  -->
       <%= render 'blogs/navbar_special_deals' %>
       <div class="nav_most_m"><%= render 'blogs/navbar_special_deals_m' %></div>
       <div class="filter-group guide_wrap ">
