--- a/app/views/blogs/_body_special_deals.html.erb
+++ b/app/views/blogs/_body_special_deals.html.erb
@@ -46,14 +46,14 @@
   <div class="btn"><a target="_blank" href="https://bit.ly/34bCvu5">Shop Now</a></div>
 </div> -->
 
-<!-- <div class="filter-node editors_box special_box" data-filter='["big","amazon"]'>
-  <a target="_blank" href="https://amzn.to/2MJAoIz"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon"></a>
+<div class="filter-node editors_box special_box" data-filter='["big","amazon"]'>
+  <a target="_blank" href="https://amzn.to/2ndVRyg"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon"></a>
   <div class="node-box inner special_inner">
-    <p><a target="_blank" href="MOSTREVIEW_URL"></a>Amazon The best Labor Day Sales 2019 - Site Wide</p>
+    <p><a target="_blank" href="https://amzn.to/2ndVRyg"></a>Today's Deals | Shop Today’s Deals, Lightning Deals, and limited-time discounts</p>
   </div>
-  <div class="btn"><a target="_blank" href="https://amzn.to/2MJAoIz">Shop Now</a></div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/2ndVRyg">Shop Now</a></div>
 </div>
- -->
+
 <div class="filter-node editors_box special_box" data-filter='["big","target"]'>
   <a target="_blank" href="https://bit.ly/2XpCrXO"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Target_logo.svg/432px-Target_logo.svg.png" alt="target"></a>
   <div class="node-box inner special_inner">
@@ -94,6 +94,14 @@
   <div class="btn"><a target="_blank" href="https://bit.ly/2wlnpma">Shop Now</a></div>
 </div>
 
+<div class="filter-node editors_box special_box" data-filter='["fashion","PUMA"]'>
+  <a target="_blank" href="https://bit.ly/2oEU99w"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b4/Puma_logo.svg/1280px-Puma_logo.svg.png" alt="PUMA"></a>
+  <div class="node-box inner special_inner">
+    <p><a target="_blank" href="https://bit.ly/2oEU99w">Puma | PRIVATE SALE Up to 70%. Limited tiem deals.</a></p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://bit.ly/2oEU99w">Shop Now</a></div>
+</div>
+
 <!-- <div class="filter-node editors_box special_box" data-filter='["big","sears"]'>
   <a target="_blank" href="https://bit.ly/2PnoExH"><img src="https://i.pinimg.com/originals/5a/90/ca/5a90ca418aa17962c36688c7e915f27f.png" alt="sears"></a>
   <div class="node-box inner special_inner">
@@ -102,13 +110,13 @@
   <div class="btn"><a target="_blank" href="https://bit.ly/2PnoExH">Shop Now</a></div>
 </div> -->
 
-<!-- <div class="filter-node editors_box special_box" data-filter='["elec","bestbuy"]'>
-  <a target="_blank" href="https://bit.ly/2XqzyGk"><img src="https://upload.wikimedia.org/wikipedia/commons/f/f5/Best_Buy_Logo.svg" alt="bestbuy"></a>
+<div class="filter-node editors_box special_box" data-filter='["elec","bestbuy"]'>
+  <a target="_blank" href="https://bit.ly/2oI8xh5"><img src="https://upload.wikimedia.org/wikipedia/commons/f/f5/Best_Buy_Logo.svg" alt="bestbuy"></a>
   <div class="node-box inner special_inner">
-    <p><a target="_blank" href="https://bit.ly/2XqzyGk">Labor Day Sale!! Save up to 40% on appliance top deals. Ends 9/11.</a></p>
+    <p><a target="_blank" href="https://bit.ly/2oI8xh5">Deal of the Day | Limited quantities. See product detail pages for availability.</a></p>
   </div>
-  <div class="btn"><a target="_blank" href="https://bit.ly/2XqzyGk">Shop Now</a></div>
-</div> -->
+  <div class="btn"><a target="_blank" href="https://bit.ly/2oI8xh5">Shop Now</a></div>
+</div>
 
 <!-- <div class="filter-node editors_box special_box" data-filter='["elec","hp"]'>
   <a target="_blank" href="https://bit.ly/2Le8XEV"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/HP_logo_2012.svg/768px-HP_logo_2012.svg.png" alt="hp"></a>
